# DIG-Wizard

./: .gitignore  CLAUDE.md  DIG ANALYTICS CLAUDE.md  README.md  app.py  bi_agent.py  de_agent.py  hebrew implematntetion plan.md  main.py  pm_agent.py  profiler.py  pyproject.toml  requirements.txt  researcher_agent.py  session_state_registry.md  starter_kit.py  switchboard.py  synthesis_agent.py  test.py
agents/: bi_agent.py  da_agent.py  de_agent.py  pm_agent.py  researcher_agent.py  synthesis_agent.py
core/: cross_path_aggregator.py  profiler.py  starter_kit.py  switchboard.py  viz_kit.py
docs/: DIG ANALYTICS CLAUDE.md  session_state_registry.md
utils/: utils.py
